# metrics

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: ASTMatcherVisitor.hpp  AbstractVisitor.hpp  ClassCtxVisitor.hpp  ClassVisitor.hpp  CtxVisitor.hpp  CyclomaticVisitor.hpp  FuncInfoVisitor.hpp  FunctionCtxVisitor.hpp  FunctionVisitor.hpp  HalsteadVisitor.hpp  Logging.hpp  Metric.hpp  MetricVisitor.hpp  NPathVisitor.hpp  Utility.hpp
include/metrics/: ChidKemVisitor.hpp  ClassOverviewVisitor.hpp  CyclomaticVisitor.hpp  FansVisitor.hpp  FuncInfoVisitor.hpp  HalsteadVisitor.hpp  NPathVisitor.hpp
integration_tests/: README.md  run_tests.sh  test.py
integration_tests/01/: conf.yaml  expected.yaml
integration_tests/01/in/: main.cpp
integration_tests/02/: conf.yaml  expected.yaml
integration_tests/02/in/: bar.h  foo.h  main.cpp
integration_tests/in/01/: main.cpp
integration_tests/in/02/: file.cpp  file.h
modules/: ASTMatcherVisitor.hpp  AbstractVisitor.cpp  AbstractVisitor.hpp  CyclomaticVisitor.cpp  CyclomaticVisitor.hpp  FuncInfoVisitor.cpp  FuncInfoVisitor.hpp  HalsteadVisitor.cpp  HalsteadVisitor.hpp  Metric.hpp  MetricVisitor.cpp  MetricVisitor.hpp  NPathVisitor.cpp  NPathVisitor.hpp
scripts/: check_format.sh  install_hooks.sh  pre-commit.sh
src/: AbstractVisitor.cpp  ChidKemVisitor.cpp  ClassOverviewVisitor.cpp  CyclomaticVisitor.cpp  FansVisitor.cpp  FuncInfoVisitor.cpp  HalsteadVisitor.cpp  MetricVisitor.cpp  NPathVisitor.cpp  Utility.cpp
test/: Asserts.hpp  CMakeLists.txt  ChidKem.cpp  ClassOverview.cpp  Cyclomatic.cpp  Fans.cpp  FuncInfo.cpp  Halstead.cpp  NPath.cpp  TestToolRun.hpp
tests/: Asserts.hpp  Base.cpp  CMakeLists.txt  test1.cpp  test2.cpp  tmp.cpp
tests/.cccc/: CMail.html  CMail.xml  CMailLog.html  CMailLog.xml  CTimeStamp.html  CTimeStamp.xml  InvalidFormatException.html  InvalidFormatException.xml  anonymous.html  anonymous.xml  cccc.db  cccc.html  cccc.xml  cccc_src.html  istream.html  istream.xml  ostream.html  ostream.xml  string.html  string.xml  vector.html  vector.xml
tests/halstead/: test1.cpp
tests/macros/: test1.cpp
tests/npath/: test1.cpp
tests/template/: test1.cpp
